# tobira

./: .gitignore  .release-please-manifest.json  LICENSE  README.md  SECURITY.md  mkdocs.yml  release-please-config.json
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: docker.yml  js.yml  mirror-sync.yml  pages.yml  python.yml  release-npm.yml  release-please.yml  release-pypi.yml  sbom.yml  security.yml  sync-upstream.yml
charts/tobira/: Chart.yaml  README.md  values.yaml
charts/tobira/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
docker/: HANDS_ON.md  README.md  docker-compose.ha.yml  docker-compose.real.yml  docker-compose.yml  test.sh
docker/api/: Dockerfile  mock_server.py
docker/api-real/: Dockerfile  config.toml
docker/haraka/: Dockerfile
docker/haraka/config/: plugins  smtp.ini  tobira.ini
docker/nginx/: nginx-ha.conf
docker/rspamd/: Dockerfile
docker/rspamd/local.d/: tobira.conf  worker-controller.inc
docker/rspamd/modules.d/: tobira.conf
docker/spamassassin/: Dockerfile  v99_tobira_docker.cf
docs/: CNAME  api.md  cli.md  index.html  index.md  pricing.md  roadmap.md
docs/getting-started/: backends.md  configuration.md  phased-rollout.md  quickstart.md
docs/mta/: haraka.md  index.md  postfix-milter.md  rspamd.md  spamassassin.md
integrations/haraka/: eslint.config.mjs  package-lock.json  package.json
integrations/haraka/config/: tobira.ini
integrations/haraka/plugins/: tobira.js
integrations/haraka/tests/: tobira.test.js
integrations/postfix-milter/: tobira-milter.conf  tobira-milter.service
integrations/rspamd/: tobira.conf  tobira.lua
integrations/spamassassin/: Tobira.pm  tobira.cf
js/: CHANGELOG.md  README.md  eslint.config.mjs  package-lock.json  package.json
js/src/: client.js  index.js
js/tests/: client.test.js
k8s/: README.md  configmap.yaml  deployment.yaml  namespace.yaml  pvc.yaml  service.yaml
kubernetes/: deployment.yaml  hpa.yaml  pdb.yaml  service.yaml
python/: CHANGELOG.md  README.md  pyproject.toml
python/tests/: test_ab_test.py  test_active_learning.py  test_adversarial.py  test_ai_generated.py  test_auth.py  test_backends.py  test_benchmark.py  test_cli.py  test_dashboard.py  test_data.py  test_distillation.py  test_doctor.py  test_doctor_features.py  test_errors.py  test_evaluation.py  test_export.py  test_feedback.py  test_ha.py  test_headers.py  test_hub.py  test_japanese_recognizer.py  test_language.py  test_migrate_store.py  test_milter.py  test_models.py  test_monitoring.py  test_notifications.py  test_pipeline.py  test_preprocessing.py  test_retrain.py  test_serving.py  test_telemetry.py  test_train_cli.py  test_trainer.py
python/tobira/: __init__.py  config.py  errors.py  hub.py  models.py  telemetry.py
python/tobira/adversarial/: __init__.py  ai_generated.py  detectors.py
python/tobira/backends/: __init__.py  bert.py  ensemble.py  factory.py  fasttext.py  llm_api.py  ollama.py  onnx.py  prompts.py  protocol.py  two_stage.py
python/tobira/cli/: __init__.py  ab_test_cmd.py  active_learning.py  demo.py  distill.py  doctor.py  evaluate.py  generators.py  hub_cmd.py  migrate_store.py  milter_cmd.py  monitor_cmd.py  mta_detectors.py  serve.py  setup.py  train.py
python/tobira/core/: __init__.py  distillation.py  export.py  trainer.py
python/tobira/data/: __init__.py  categories.py  feedback_store.py  generator.py
python/tobira/evaluation/: __init__.py  active_learning.py  benchmark.py  metrics.py  plot.py  report.py  threshold.py
python/tobira/milter/: __init__.py  config.py  filter.py
python/tobira/monitoring/: __init__.py  analyzer.py  collector.py  drift.py  email_notifier.py  notifier.py  retrain.py  slack.py  store.py  teams.py
python/tobira/preprocessing/: __init__.py  anonymizer.py  headers.py  language.py  pipeline.py
python/tobira/preprocessing/recognizers/: __init__.py  japanese.py
python/tobira/serving/: __init__.py  _feedback_routes.py  ab_test.py  auth.py  dashboard.py  ha.py  schemas.py  server.py
