[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tobira"
version = "0.0.1"
description = "tobira - gateway toolkit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
fasttext = [
    "fasttext-wheel>=0.9.2",
]
bert = [
    "torch>=2.0",
    "transformers>=4.30",
]
serving = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.11'",
]
evaluation = [
    "matplotlib>=3.5",
]
onnx = [
    "onnxruntime>=1.16",
    "transformers>=4.30",
    "optimum>=1.13",
]
llm = [
    "httpx>=0.24",
]
redis = [
    "redis>=4.0",
]

[project.scripts]
tobira = "tobira.cli:main"

[project.urls]
Repository = "https://github.com/piroz/tobira"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "httpx>=0.24",
    "mypy>=1.10",
    "tobira[fasttext,bert,serving,evaluation,onnx,llm]",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["\\.venv"]

[[tool.mypy.overrides]]
module = [
    "fasttext",
    "transformers",
    "uvicorn",
    "tomli",
    "matplotlib.*",
    "onnxruntime",
    "onnxruntime.*",
    "optimum",
    "optimum.*",
    "spacy",
    "spacy.*",
    "ginza",
    "redis",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "torch",
    "torch.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.coverage.run]
source = ["tobira"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]

[tool.pytest.ini_options]
addopts = "--cov=tobira --cov-report=term-missing"
