[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tobira"
version = "0.5.0"
description = "ML-powered email spam detection toolkit with MTA integrations"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Velocity LABO" },
]
requires-python = ">=3.9"
keywords = [
    "spam",
    "email",
    "spam-detection",
    "machine-learning",
    "mail-server",
    "fasttext",
    "bert",
    "mta",
    "rspamd",
    "spamassassin",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email :: Filters",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
fasttext = [
    "fasttext-wheel>=0.9.2",
]
bert = [
    "torch>=2.0",
    "transformers>=4.30",
]
serving = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.11'",
]
evaluation = [
    "matplotlib>=3.5",
]
onnx = [
    "onnxruntime>=1.16",
    "transformers>=4.30",
    "optimum>=1.13",
]
llm = [
    "httpx>=0.24",
]
redis = [
    "redis>=4.0",
]
multilingual = [
    "langdetect>=1.0.9",
]
hub = [
    "huggingface_hub>=0.20",
]
milter = [
    "pymilter>=1.0.4",
]
postgres = [
    "psycopg[binary]>=3.1",
    "psycopg_pool>=3.1",
]

[project.scripts]
tobira = "tobira.cli:main"

[project.entry-points."tobira.backends"]
# Built-in backends are registered directly in factory.py.
# Third-party plugins can register here by adding to their own pyproject.toml:
#   [project.entry-points."tobira.backends"]
#   my_backend = "my_package.backend:MyBackendClass"

[project.urls]
Homepage = "https://velocitylabo.dev/"
Documentation = "https://velocitylabo.github.io/tobira"
Repository = "https://github.com/velocitylabo/tobira"
Changelog = "https://github.com/velocitylabo/tobira/blob/main/python/CHANGELOG.md"
"Bug Reports" = "https://github.com/velocitylabo/tobira/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "httpx>=0.24",
    "mypy>=1.10",
    "tobira[fasttext,bert,serving,evaluation,onnx,llm,redis,multilingual,hub]",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["\\.venv"]

[[tool.mypy.overrides]]
module = [
    "fasttext",
    "transformers",
    "uvicorn",
    "tomli",
    "matplotlib.*",
    "onnxruntime",
    "onnxruntime.*",
    "optimum",
    "optimum.*",
    "spacy",
    "spacy.*",
    "ginza",
    "redis",
    "langdetect",
    "langdetect.*",
    "huggingface_hub",
    "huggingface_hub.*",
    "Milter",
    "Milter.*",
    "psycopg",
    "psycopg.*",
    "psycopg_pool",
    "psycopg_pool.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "torch",
    "torch.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.coverage.run]
source = ["tobira"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]

[tool.pytest.ini_options]
addopts = "--cov=tobira --cov-report=term-missing"
